--- a/location.html
+++ b/location.html
@@ -23,7 +23,7 @@
     alert("in save");
 
 	    $.ajax({
-		    url: 'http://rohit.milestoneinfosoft.com/frmlocs1.aspx?a='+positionInfo,
+		    url: 'https://rohit.milestoneinfosoft.com/frmlocs1.aspx?a='+positionInfo,
 		    type: 'GET',
 		    contentType: 'application/text',
 		    success: function(){
