--- a/location.html
+++ b/location.html
@@ -26,6 +26,7 @@
 		    url: 'https://rohit.milestoneinfosoft.com/frmlocs1.aspx?a='+positionInfo,
 		    type: 'GET',
 		    contentType: 'application/text',
+		    headers: {  'Access-Control-Allow-Origin': '*' },
 		    success: function(){
 		       alert('Saved');
 		    },
